k8sDeployment/infraweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: infraweb
  name: infraweb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infraweb
  template:
    metadata:
      labels:
        app: infraweb
    spec:
      containers:
      - name: infraweb
        image: foriben/infraweb
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "50m" 
            memory: "64Mi"  
          limits:
            cpu: "100m"  
            memory: "128Mi"
