k8sDeployment/infraweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infraweb-ingress
  namespace: infraweb
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: airtek.foribenngang.click
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: infraweb-service
                port:
                  number: 3000
  tls:
    - hosts:
        - airtek.foribenngang.click  
      secretName: airtek-secret
